--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -10,6 +10,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   image-rendering: pixelated;
+  margin: auto;
 }
 
 .gameplay-frame {
