--- a/src/components/Monster/MonsterAnims/Boar.css
+++ b/src/components/Monster/MonsterAnims/Boar.css
@@ -6,7 +6,7 @@
   background-size: cover;
   image-rendering: pixelated;
   position: absolute;
-  top: 110px;
+  bottom: 110px;
   left: 150px;
 }
 
