--- a/src/components/Staff/Staff.css
+++ b/src/components/Staff/Staff.css
@@ -3,7 +3,7 @@
   height: 150px;
   background: url("./staff/staff.png");
   background-size: cover;
-  margin: 3rem auto 5rem;
+  margin: 4rem auto 5rem;
   image-rendering: pixelated;
   position: relative;
 }
@@ -100,11 +100,29 @@
   background-size: cover;
 }
 
-.pitch {
+.pitch.below-space-two {
   background: url("./staff/notehead-two-ledger-below-space.png");
   top: 145px;
   width: 39px;
   height: 45px;
+  image-rendering: pixelated;
+  background-size: cover;
+}
+
+.pitch.below-line-three {
+  background: url("./staff/notehead-three-ledger-below.png");
+  top: 145px;
+  width: 39px;
+  height: 55px;
+  image-rendering: pixelated;
+  background-size: cover;
+}
+
+.pitch.above-line-three {
+  background: url("./staff/notehead-three-ledger-above.png");
+  top: -50px;
+  width: 39px;
+  height: 55px;
   image-rendering: pixelated;
   background-size: cover;
 }
