--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -3,18 +3,32 @@
   overflow: hidden;
 }
 
+.game-area-wrapper {
+  background: url(./medbg1.png);
+  max-width: 1500px;
+  height: 382px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  image-rendering: pixelated;
+  position: relative;
+}
+
 .game-header {
+  position: relative;
   display: flex;
   justify-content: space-between;
-  height: 120px;
+  height: 82px;
 }
 
 .game-header h4 {
+  position: absolute;
+  right: 0;
   margin: 1rem;
 }
 
 .avatar-border {
-  background: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  background: rgba(0, 0, 0, 0.7);
   height: 80px;
   width: 80px;
   margin: 1rem 0 0 1rem;
@@ -73,21 +87,13 @@
 
 .timer {
   font-size: 3rem;
-  margin: 1rem;
-}
-
-.game-background {
-  background: url(./path.png);
-  width: 1500px;
-  height: 300px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  image-rendering: pixelated;
-  margin: auto;
+  height: 50px;
+  margin: 1rem auto;
 }
 
 .gameplay-frame {
-  position: absolute;
+  position: relative;
+  bottom: 0;
   left: 0;
   right: 0;
   margin-left: auto;
