--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -4,13 +4,14 @@
 }
 
 .game-area-wrapper {
-  background: url(./medbg1.png);
+  background: url(./giantbg.png);
   max-width: 1500px;
-  height: 382px;
+  height: 750px;
   background-repeat: no-repeat;
   background-size: cover;
   image-rendering: pixelated;
   position: relative;
+  margin: auto;
 }
 
 .game-header {
@@ -86,9 +87,21 @@
 }
 
 .timer {
+  font-family: "chronotype";
+  line-height: 50px;
+  padding-top: 0.7rem;
+}
+
+.timer-frame {
+  background: url("./clockframe.png");
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 3rem;
-  height: 50px;
-  margin: 1rem auto;
+  width: 240px;
+  height: 60px;
+  margin: auto;
 }
 
 .gameplay-frame {
