--- a/src/components/Signup/Signup.css
+++ b/src/components/Signup/Signup.css
@@ -1,1 +1,31 @@
+.signup-form {
+	width: 400px;
+	margin: auto;
+}
 
+.firstname-input,
+.lastname-input,
+.email-input,
+.password-input,
+.confirmpassword-input {
+	height: 20px;
+	display: flex;
+	padding-bottom: 10px;
+}
+
+.student-button {
+	cursor: pointer;
+	display: inline-flex;
+	justify-content: space-between;
+}
+
+.teacher-button {
+	cursor: pointer;
+	display: inline-flex;
+	justify-content: space-between;
+}
+
+button {
+	margin-top: 10px;
+	cursor: pointer;
+}
