--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,19 +1,23 @@
 .login-form {
-	width: 400px;
-	margin: auto;
+  position: absolute;
+  padding-top: 4rem;
+  width: 300px;
+  height: 300px;
+  top: 0;
+  right: 300px;
+  transition: 0.3s;
 }
 
-.email-input,
-.password-input {
-	height: 20px;
-	display: flex;
-	padding-bottom: 10px;
+.login-form.true {
+  right: 0;
 }
 
-button {
-	cursor: pointer;
-	margin-top: 10px;
+.login-form input {
+  display: block;
+  margin: 1rem auto;
 }
 
-
-
+.login-form button {
+  cursor: pointer;
+  margin-bottom: 1rem;
+}
