--- a/src/components/GameUserModal/GameUserModal.css
+++ b/src/components/GameUserModal/GameUserModal.css
@@ -42,7 +42,9 @@
 }
 
 .current-instrument-label {
-  margin: 0.5rem 0 0;
+  font-size: 1.1rem;
+  font-weight: 700;
+  margin: 1rem 0 0;
 }
 
 .current-instrument {
