--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -14,6 +14,6 @@
   height: 300px;
   margin: 2rem auto;
   border: 1px solid rgba(0, 0, 0, 0.4);
-  /* overflow: hidden; */
+  overflow: hidden;
   position: relative;
 }
