--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -24,13 +24,16 @@
 
 .avatar-border {
   position: absolute;
-  background: rgba(0, 0, 0, 0.7);
+  background: #8ab6e2;
+  /* background: url(./avatar-backer.png); */
+  background-size: cover;
   height: 80px;
   width: 80px;
   margin: 1rem 0 0 1rem;
   display: flex;
   align-items: center;
   border-radius: 50%;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
 }
 
 .avatar-border:hover {
@@ -41,6 +44,10 @@
   margin: auto;
   height: 62px;
   width: 37px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 11px;
 }
 
 .header-avatar.one {
