Write skeleton for post-game achievement logic

--- a/src/components/GameUserModal/GameUserModal.css
+++ b/src/components/GameUserModal/GameUserModal.css
@@ -1,11 +1,10 @@
 .game-user-modal {
-  width: 99px;
-  height: 180px;
-  padding-right: 12px;
+  width: 180px;
+  height: 240px;
   position: absolute;
   left: -300px;
   top: 110px;
-  background: url("../Game/modal-frame.png");
+  background: url("../Game/images/big-modal-frame.png");
   image-rendering: pixelated;
   background-size: cover;
   background-repeat: no-repeat;
@@ -21,32 +20,37 @@
   position: absolute;
   font-family: "chronotype";
   display: block;
-  font-size: 1rem;
+  font-size: 1.3rem;
   margin: auto;
+  border-radius: 10px;
 }
 
 .exit-game-button {
   bottom: 20px;
-  width: 74px;
-  left: 13px;
+  width: 50px;
+  left: 0;
+  right: 0;
 }
 
 .reset-game-button {
-  bottom: 45px;
-  width: 47px;
-  left: 27px;
+  bottom: 50px;
+  width: 60px;
+  left: 0;
+  right: 0;
 }
 
 .game-modal-username {
-  margin: 1rem 0 0;
+  font-size: 1.5rem;
+  margin: 2rem 0 0;
 }
 
 .current-instrument-label {
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   font-weight: 700;
   margin: 1rem 0 0;
 }
 
 .current-instrument {
+  font-size: 1.2rem;
   margin: 0;
 }
