--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,6 +1,6 @@
 .login-form {
   position: absolute;
-  padding-top: 4rem;
+  padding-top: 1rem;
   width: 300px;
   height: 300px;
   top: 0;
@@ -13,7 +13,7 @@
 }
 
 .login-form {
-  padding-top: 1rem;
+  padding-top: 0.5rem;
 
   position: absolute;
   width: 300px;
@@ -23,6 +23,10 @@
   top: 0;
   font-family: "chronotype";
   font-size: 1.3rem;
+}
+
+.login-form-label {
+  margin-top: 0;
 }
 
 .signup-form.true {
@@ -54,7 +58,7 @@
 }
 
 .signup-form-switch-button {
-  margin: 9rem 0 0 0;
+  margin: 8.5rem 0 0 0;
 }
 
 .login-form button:hover {
